# DjangoWebShop

./: .env.example  .gitignore  README.md  catalog_fixture.json  groups.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_options.py  0003_alter_blogpost_count_of_views.py  0004_alter_blogpost_content.py
blog/templates/blog/: base.html  blog_posts_list.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blog/templates/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_contact.py  0003_product_is_available.py  0004_product_is_published.py  0005_alter_product_options.py  0006_product_owner.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_detail.html  products_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_avatar_and_more.py  0003_remove_customuser_username.py
users/templates/: login.html
users/templates/users/: customuser_form.html
