[tool.poetry]
name = "djangowebshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
dotenv = "^0.9.9"
psycopg2-binary = "^2.9.11"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
isort = "^7.0.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'